...
            assetPath(kSubfolderMisc, "new_deck_button"),
            width: double.infinity,
            height: double.infinity,
            fit: BoxFit.fill,
          ),
          OutlinedButton(
            key: const Key("newDeckButton"),
            onPressed: () {
              _showAlert(context, state);
            },
            style: OutlinedButton.styleFrom(
              foregroundColor: AppColors.white,
              side: const BorderSide(
...
        children: [
          Image.asset(
            assetPath(kSubfolderMisc, "copy_deck_button"),
            fit: BoxFit.fill,
          ),
          OutlinedButton(
            key: const Key("fetchDeckCodeButton"),
            onPressed: () => ref
                .read(deckBuilderNotifierProvider.notifier)
                .handleFetchDeckCode(context.locale.toStringWithSeparator()),
            style: OutlinedButton.styleFrom(
              foregroundColor: AppColors.white,
              side: const BorderSide(
...
