...
          ),
          Row(
            mainAxisSize: MainAxisSize.min,
            children: [
              Expanded(
                child: GestureDetector(
                  key: const Key("classFilterButton"),
                  onTap: onToggleClassFilter,
                  child: Padding(
                    padding: EdgeInsets.only(left: 3.w),
                    child: Stack(
                      fit: StackFit.expand,
                      alignment: Alignment.center,
...
                    ),
                  ),
                ),
              ),
              Expanded(
                child: GestureDetector(
                  key: const Key("neutralClassFilterButton"),
                  onTap: onToggleNeutralFilter,
                  child: Padding(
                    padding: EdgeInsets.only(right: 3.w),
                    child: Stack(
                      fit: StackFit.expand,
                      alignment: Alignment.center,
...
